--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,76 +1,58 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <title>Тарифы сотовой связи Tele2, самые выгодные тарифы Республики Татарстан для мобильного телефона</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}<title>Тарифы сотовой связи Tele2, самые выгодные тарифы Республики Татарстан для мобильного
+    телефона</title>{% endblock %}
 
-<h1 align="center"><b><i>Тарифы и опции</i></b></h1>
+{% block headline %}<h1 align="center"><b><i>Тарифы и опции</i></b></h1>{% endblock %}
 
-<div class="container">
-    <div class="row">
-        <div class="col">
+{% block time %}
+{% for item in actual %}
+<tr>
+    <td>{{item.name}}
 
-            <table class="table table-striped">
+        {% if item.hit == True %}
+        <span class="badge badge-pill badge-danger">Хит продаж</span>
+        {% endif %}
+
+        <p>
+            {% if item.price == 0 %}
+            <font size="-1">без абонентской платы</font>
+            {% elif item.price != 0 %}
+            <font size="+3">{{ item.price }} ₽</font><sub>/{{item.price_period}}</sub>
+            {% endif %}</p>
+
+    <td>
+        {% if item.gb == -1 %}
+        БЕЗЛИМИТНЫЙ ИНТЕРНЕТ
+        {% elif item.gb != 0 %}
+        {{ item.gb }} ГБ
+        {% endif %}</p>
+
+        {% if item.gb_unlim != None %}
+        <p><font size="-1"><i>+безлимитные</i></font></p>
+        <p><font size="-1">{{ " ".join(item.gb_unlim) }}</font></p>
+        {% endif %}
+    </td>
+
+    <td>
+        {% if item.minutes != 0 %}
+        {{ item.minutes }} мин.
+        {% endif %}
+
+        {% if item.minutes_unlim_tele2 == True %}
+        <p><i>+ безлимит на Tele2 России</i></p>
+        {% endif %}
+    </td>
+
+    <td>
+        {% if item.sms != 0 %}
+        {{ item.sms }} SMS
+        {% endif %}
+    </td>
+
+</tr>
+{% endfor %}
+{% endblock %}
 
 
-                {% for item in actual %}
-                <tr>
-                    <td>{{item.name}}
-
-                        {% if item.hit == True %}
-                        <span class="badge badge-pill badge-danger">Хит продаж</span>
-                        {% endif %}
-
-                        <p>
-                            {% if item.price == 0 %}
-                            <font size="-1">без абонентской платы</font>
-                            {% elif item.price != 0 %}
-                            <font size="+3">{{ item.price }} ₽</font><sub>/{{item.price_period}}</sub>
-                            {% endif %}</p>
-
-                    <td>
-                        {% if item.gb == -1 %}
-                        БЕЗЛИМИТНЫЙ ИНТЕРНЕТ
-                        {% elif item.gb != 0 %}
-                        {{ item.gb }} ГБ
-                        {% endif %}</p>
-
-                        {% if item.gb_unlim != None %}
-                        <p><font size="-1"><i>+безлимитные</i></font></p>
-                        <p><font size="-1">{{ " ".join(item.gb_unlim) }}</font></p>
-                        {% endif %}
-                    </td>
-
-                    <td>
-                        {% if item.minutes != 0 %}
-                        {{ item.minutes }} мин.
-                        {% endif %}
-
-                        {% if item.minutes_unlim_tele2 == True %}
-                        <p><i>+ безлимит на Tele2 России</i></p>
-                        {% endif %}
-                    </td>
-
-                    <td>
-                        {% if item.sms != 0 %}
-                        {{ item.sms }} SMS
-                        {% endif %}
-                    </td>
-
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
-    </div>
-</div>
-
-<p align="center"><font size="+2"><a href="{{ url_for('archive') }}"><i>Архивные тарифы</i></a></font></p>
-</body>
-</html>
+{% block link %}<p align="center"><font size="+2"><a href="{{ url_for('archive') }}"><i>Архивные тарифы</i></a></font>
+</p>{% endblock %}
