Template inheritance added

--- a/app/templates/archive.html
+++ b/app/templates/archive.html
@@ -4,7 +4,7 @@
 
 {% block headline %}<h1 align="center"><b><i>Архивные тарифы</i></b></h1>{% endblock %}
 
-{% block time %}
+{% block tariff_list %}
 {% for item in archived %}
 <tr>
     <td>{{item.name}}
