--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
         <div class="col">
 
             <table class="table table-striped">
-                {% block time %} {% endblock %}
+                {% block tariff_list %} {% endblock %}
 
 
             </table>
