--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block headline %}<h1 align="center"><b><i>Тарифы и опции</i></b></h1>{% endblock %}
 
-{% block time %}
+{% block tariff_list %}
 {% for item in actual %}
 <tr>
     <td>{{item.name}}
