--- a/app/templates/archive.html
+++ b/app/templates/archive.html
@@ -6,63 +6,14 @@
 
 {% block tariff_list %}
 {% for item in archived %}
-<tr>
-    <td>{{item.name}}
-
-        {% if item.hit == True %}
-        <span class="badge badge-pill badge-danger">Хит продаж</span>
-        {% endif %}
-
-        <p>
-            {% if item.price == 0 %}
-            <font size="-1">без абонентской платы</font>
-            {% elif item.price != 0 %}
-            <font size="+3">{{ item.price }} ₽</font><sub>/{{item.price_period}}</sub>
-            {% endif %}</p>
-
-    <td>
-        {% if item.gb == -1 %}
-        БЕЗЛИМИТНЫЙ ИНТЕРНЕТ
-        {% elif item.gb != 0 %}
-        {{ item.gb }} ГБ
-        {% endif %}</p>
-
-        {% if item.gb_unlim != None %}
-        <p><font size="-1"><i>+безлимитные</i></font></p>
-        <p><font size="-1">{{ " ".join(item.gb_unlim) }}</font></p>
-        {% endif %}
-    </td>
-
-    <td>
-        {% if item.minutes != 0 %}
-        {{ item.minutes }} мин.
-        {% endif %}
-
-        {% if item.minutes_unlim_tele2 == True %}
-        <p><i>+ безлимит на Tele2 России</i></p>
-        {% endif %}
-    </td>
-
-    <td>
-        {% if item.sms != 0 %}
-        {{ item.sms }} SMS
-        {% endif %}
-    </td>
-
-</tr>
+    {% with item=item %}
+        {% include "item.html" %}
+    {% endwith %}
 {% endfor %}
 {% endblock %}
 
 {% block link %}<p align="center"><font size="+2"><a href="{{ url_for('index') }}"><i>Текущие тарифы</i></a></font></p>
 </p>{% endblock %}
-
-
-
-
-
-
-
-
 
 
 
