--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -2,44 +2,46 @@
     <td>{{ item.name }}
 
         {% if item.hit == True %}
-            <span class="badge badge-pill badge-danger">Хит продаж</span>
+        <span class="badge badge-pill badge-danger">Хит продаж</span>
         {% endif %}
 
-        <p>
-            {% if item.price == 0 %}
-                <font size="-1">без абонентской платы</font>
-            {% elif item.price != 0 %}
-                <font size="+3">{{ item.price }} ₽</font><sub>/{{ item.price_period }}</sub>
-            {% endif %}</p>
 
+        {% if item.price == 0 %}
+        <p class="h7 font-weight-light">без абонентской платы</p>
+        {% elif item.price != 0 %}
+        <p class="h1 font-weight-bold">{{ item.price }} <sup>₽</sup> <sub class="h6 font-weight-normal">/{{
+            item.price_period
+            }}</sub></p>
+        {% endif %}
+    </td>
     <td>
-        <p>
+        <p class="h5 font-weight-bold">
             {% if item.gb == -1 %}
-                БЕЗЛИМИТНЫЙ ИНТЕРНЕТ
+            БЕЗЛИМИТНЫЙ ИНТЕРНЕТ
             {% elif item.gb != 0 %}
-                {{ item.gb }} ГБ
+            {{ item.gb }} ГБ
             {% endif %}
         </p>
 
         {% if item.gb_unlim != None %}
-            <p><font size="-1"><i>+безлимитные</i></font></p>
-            <p><font size="-1">{{ " ".join(item.gb_unlim) }}</font></p>
+        <p class="h6 font-italic">+безлимитные</p>
+        <p class="h6 font-normal">{{ " ".join(item.gb_unlim) }}</p>
         {% endif %}
     </td>
 
     <td>
         {% if item.minutes != 0 %}
-            {{ item.minutes }} мин.
+        <p class="h5 font-weight-bold">{{ item.minutes }} мин.</p>
         {% endif %}
 
         {% if item.minutes_unlim_tele2 == True %}
-            <p><i>+ безлимит на Tele2 России</i></p>
+        <p class="h6 font-italic">+ безлимит на Tele2 России</p>
         {% endif %}
     </td>
 
     <td>
         {% if item.sms != 0 %}
-            {{ item.sms }} SMS
+        <p class="h5 font-weight-bold">{{ item.sms }} SMS</p>
         {% endif %}
     </td>
 
